tests/compiler/test_files/keyword_identifiers2.swift
// error

let Double = 2